--- a/style.css
+++ b/style.css
@@ -339,3 +339,11 @@ footer {
 .carrossel-botoes button:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
+.bg-video {
+  width: 100%;
+  max-width: 600px;
+  border-radius: 15px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
